modified for testing reasons

--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ button {
 body {
 	font: 14px 'Times New Roman';
 	line-height: 1.4em;
-	background: #0b7da0;
+	background: #727c80;
 	color: #810505;
 	min-width: 230px;
 	max-width: 550px;
